Prevent <summary>'s from wrapping
It looks bad due to an indentation issue that I'm not sure is fixable.

Have them scroll horizontally instead.

--- a/oatcake.css
+++ b/oatcake.css
@@ -270,6 +270,11 @@ pre {
   overflow-wrap: normal;
 }
 
+summary {
+  overflow: auto;
+  white-space: nowrap;
+}
+
 mark {
   background-color: yellow;
   color: black;
